// ==========================================
// ESTRUTURA DE BANCO DE DADOS IIOT / INDUSTRIA 4.0 (TimescaleDB Hypertables)
// ==========================================

// Enums definition
Enum user_role {
  OPERATOR
  TECHNICIAN
  MANAGER
  ADMIN
}

Enum equipment_type {
  MOTOR
  HVAC
  LIGHTING
  CONVEYOR
  COMPRESSOR
}

Enum equipment_status {
  ACTIVE
  MAINTENANCE
  INACTIVE
}

Enum gateway_status {
  ONLINE
  OFFLINE
  MAINTENANCE
}

Enum sensor_type {
  CURRENT
  VOLTAGE
  TEMPERATURE
  VIBRATION
}

Enum sensor_status {
  ONLINE
  OFFLINE
  ERROR
}

Enum actuator_type {
  HVAC_COOLING
  LIGHTING
  EXHAUST_FAN
  EMERGENCY_STOP
  VALVE
}

Enum actuator_status {
  OFF
  ON
  FAULT
  MAINTENANCE
}

Enum alert_severity {
  INFO
  WARNING
  CRITICAL
}

Enum alert_status {
  PENDING
  ACKNOWLEDGED
  RESOLVED
}

Enum work_order_priority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

Enum work_order_status {
  OPEN
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

Enum rule_condition {
  GREATER_THAN
  LESS_THAN
  EQUALS
  GREATER_THAN_OR_EQUAL
  LESS_THAN_OR_EQUAL
}

Enum rule_operator {
  AND
  OR
}

Enum rule_action_type {
  TOGGLE_ACTUATOR
  TRIGGER_LIGHT_ALERT
  SEND_EMAIL
}

// Tables definition
Table sectors {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null, note: 'Ex: Pátio Fabril, Linha A, HVAC']
  description text
  created_at timestamptz [default: `now()`]
}

Table gateways {
  id uuid [pk, default: `gen_random_uuid()`]
  code varchar(50) [unique, not null, note: 'Ex: GW-SECTOR-A-01']
  mac_address varchar(17) [unique]
  ip_address varchar(45)
  firmware_version varchar(20)
  status gateway_status [not null, default: 'ONLINE']
  sector_id uuid [ref: > sectors.id]
  last_ping timestamptz
  created_at timestamptz [default: `now()`]
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null]
  email varchar [unique, not null]
  password_hash varchar [not null]
  role user_role [not null, default: 'OPERATOR']
  sector_id uuid [ref: > sectors.id]
  created_at timestamptz [default: `now()`]
}

Table equipments {
  id uuid [pk, default: `gen_random_uuid()`]
  equip_code varchar [unique, not null, note: 'Tag industrial. Ex: MOT-101, HVAC-02']
  type equipment_type [not null]
  status equipment_status [default: 'ACTIVE']
  sector_id uuid [ref: > sectors.id]
  gateway_id uuid [ref: > gateways.id]
  created_at timestamptz [default: `now()`]
}

Table equipment_state {
  equipment_id uuid [pk, ref: - equipments.id, note: 'Device Shadow (Tier 2 Real-Time State)']
  status varchar(50) [not null, default: 'UNKNOWN']
  last_payload jsonb [not null, default: '{}']
  updated_at timestamptz [not null, default: `now()`]
}

Table sensors {
  id uuid [pk, default: `gen_random_uuid()`]
  equipment_id uuid [ref: > equipments.id]
  code varchar [not null, note: 'Ex: SENS-TEMP-01, SENS-VIB-02']
  sensor_type sensor_type [not null]
  unit_of_measure varchar [note: 'A, V, °C, mm/s, BINARY']
  status sensor_status [default: 'ONLINE']
  mqtt_topic varchar [note: 'Tópico do broker MQTT para escuta do sensor']
  created_at timestamptz [default: `now()`]
}

Table actuators {
  id uuid [pk, default: `gen_random_uuid()`]
  code varchar(50) [unique, not null, note: 'Ex: ACT-FAN-01']
  actuator_type actuator_type [not null]
  status actuator_status [not null, default: 'OFF']
  command_mqtt_topic varchar(255)
  state_mqtt_topic varchar(255)
  equipment_id uuid [ref: > equipments.id]
  created_at timestamptz [not null, default: `now()`]
}

Table telemetry_data {
  sensor_id uuid [not null, ref: > sensors.id]
  timestamp timestamptz [not null, default: `now()`, note: 'Partition Key (TimescaleDB Hypertable)']
  value decimal [not null]
  raw_payload jsonb [note: 'Payload JSON original enviado pelo gateway/ESP32']

  indexes {
    (sensor_id, timestamp) [pk]
    (sensor_id, timestamp) [name: 'idx_telemetry_sensor_timestamp']
  }
}

Table rule_groups {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(100) [not null, note: 'Ex: Regra Sobreaquecimento Motor 01']
  description text
  equipment_id uuid [not null, ref: > equipments.id]
  severity alert_severity [not null, default: 'WARNING']
  operator_type rule_operator [not null, default: 'AND']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
}

Table rule_conditions {
  id uuid [pk, default: `gen_random_uuid()`]
  rule_group_id uuid [not null, ref: > rule_groups.id]
  sensor_id uuid [not null, ref: > sensors.id]
  operator rule_condition [not null]
  threshold_value decimal(15, 2) [not null]
}

Table alerts {
  id uuid [pk, default: `gen_random_uuid()`]
  equipment_id uuid [not null, ref: > equipments.id]
  rule_group_id uuid [ref: > rule_groups.id, note: 'Regra multi-sensor que disparou o alerta']
  severity alert_severity [not null]
  message text [not null]
  status alert_status [not null, default: 'PENDING']
  acknowledged_by uuid [ref: > users.id]
  triggered_at timestamptz [not null, default: `now()`]
  resolved_at timestamptz
}

Table alert_sensor_snapshots {
  id uuid [pk, default: `gen_random_uuid()`]
  alert_id uuid [not null, ref: > alerts.id]
  sensor_id uuid [not null, ref: > sensors.id]
  value_at_trigger decimal(15, 2) [not null]
}

Table work_orders {
  id uuid [pk, default: `gen_random_uuid()`]
  alert_id uuid [ref: > alerts.id, note: 'Nulo se for OS manual']
  equipment_id uuid [ref: > equipments.id]
  assigned_to uuid [ref: > users.id]
  title varchar [not null]
  description text
  priority work_order_priority [default: 'MEDIUM']
  status work_order_status [not null, default: 'OPEN']
  created_at timestamptz [not null, default: `now()`]
  closed_at timestamptz
}

Table automation_rules {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null, note: 'Ex: Ligar exaustor ao exceder 50°C']
  input_sensor_id uuid [ref: > sensors.id]
  condition rule_condition [not null]
  threshold_value float [not null]
  action_type rule_action_type [not null]
  target_actuator_id uuid [ref: > actuators.id, note: 'Atuador alvo da ação de automação']
  is_active boolean [default: true]
}
